[gd_scene load_steps=22 format=3 uid="uid://ordpxg01fp52"]

[ext_resource type="Script" uid="uid://d2hgvivci8873" path="res://scripts/SpriteMovement/fish.gd" id="1_bwvcf"]
[ext_resource type="PackedScene" uid="uid://y0gr1jpy836l" path="res://scenes/Items/Fish/F3.tscn" id="2_icf7y"]
[ext_resource type="Script" uid="uid://cbhro6gxer2xk" path="res://assets/Items/item.gd" id="4_rapw0"]
[ext_resource type="Texture2D" uid="uid://co5cti2w1fejq" path="res://assets/sprites/Fish/F3/F3.png" id="5_bwvcf"]
[ext_resource type="Texture2D" uid="uid://wlpvcd21upgp" path="res://assets/sprites/Fish/F3/F3Swim.png" id="6_oawl5"]

[sub_resource type="Resource" id="Resource_17xrc"]
script = ExtResource("4_rapw0")
name = "Redside Shiner"
type = "Fish"
inv_icon = ExtResource("5_bwvcf")
stack_amount = 1
price = 10
size = 0.75
metadata/_custom_type_script = "uid://cbhro6gxer2xk"

[sub_resource type="CircleShape2D" id="CircleShape2D_a135a"]
radius = 11.0

[sub_resource type="CircleShape2D" id="CircleShape2D_udkxk"]
radius = 54.037025

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3kku1"]
size = Vector2(11, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6ign"]
atlas = ExtResource("5_bwvcf")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rapw0"]
atlas = ExtResource("6_oawl5")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kh55e"]
atlas = ExtResource("6_oawl5")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kv6hd"]
atlas = ExtResource("6_oawl5")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m86st"]
atlas = ExtResource("6_oawl5")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ddufr"]
atlas = ExtResource("6_oawl5")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0c3pd"]
atlas = ExtResource("6_oawl5")
region = Rect2(320, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_w11df"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6ign")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rapw0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kh55e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kv6hd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m86st")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ddufr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0c3pd")
}],
"loop": true,
"name": &"Swim",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_31vt4"]
resource_name = "Idle"
length = 0.21
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FishAnim:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FishAnim:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_nese1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FishAnim:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FishAnim:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_lwo5c"]
resource_name = "Swim"
length = 0.21
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FishAnim:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Swim"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FishAnim:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.033333335, 0.06666667, 0.10000001, 0.13333334, 0.16666667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t7wgf"]
_data = {
&"Idle": SubResource("Animation_31vt4"),
&"RESET": SubResource("Animation_nese1"),
&"Swim": SubResource("Animation_lwo5c")
}

[node name="fish" type="CharacterBody2D" groups=["Fish"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_bwvcf")
item_scene = ExtResource("2_icf7y")
item_res = SubResource("Resource_17xrc")
catchdifficulty = 0.75
fish_max_speed = 20
fish_acceleration = 190
fish_power = 0.01
ideal_depth = 20.0
max_depth_diff = 5.0
scare_radius = 30.0

[node name="BiteRange" type="Area2D" parent="."]
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="BiteRange"]
shape = SubResource("CircleShape2D_a135a")

[node name="InterestRange" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="InterestRange"]
shape = SubResource("CircleShape2D_udkxk")

[node name="HitBox" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -0.5)
shape = SubResource("RectangleShape2D_3kku1")

[node name="FishAnim" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_w11df")
animation = &"Idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_t7wgf")
}
